# water-cleaner-robot

./: CMakeLists.txt  LICENSE  README.md  run_sim.sh
bindings/: pyawscr.cpp
bridge/: server.py
core/include/awscr/: brain.hpp  controller_smc.hpp  dynamics_3dof.hpp  estimator_es_ekf.hpp  mission_fsm.hpp  planner_bcd.hpp  planner_intercept_dubins.hpp  types.hpp  vfh_plus.hpp
core/src/: brain.cpp  controller_smc.cpp  dynamics_3dof.cpp  estimator_es_ekf.cpp  planner_bcd.cpp  planner_intercept_dubins.cpp  vfh_plus.cpp
dashboard/: app.js  index.html  style.css
esp32/: platformio.ini
esp32/awscr_firmware/: awscr_firmware.ino  ekf.h  fsm.h  hil_serial.h  mqtt_client_awscr.h  path_planner.h  pid.h  sensors.h
matlab/: main_simulation.m
matlab/control/: motor_model.m  pid_heading.m
matlab/detection/: sim_trash_detection.m
matlab/dynamics/: usv_3dof.m  water_disturbance.m
matlab/hil/: serial_hil.m
matlab/navigation/: boustrophedon.m  dubins_path.m  ekf_estimator.m  obstacle_vfh.m  rejoin_optimizer.m
matlab/sensors/: sim_MPU6050.m  sim_NEO6M.m  sim_QMC5883L.m  sim_lidar.m  sim_ultrasonic.m
matlab/tests/: test_boustrophedon.m  test_dubins.m  test_ekf.m
matlab/viz/: live_plot.m
sim/: dynamics_integrator.py  loop.py  sensors.py  world_env.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
